app/assets/stylesheets/master.css.scss
@import url(http://fonts.googleapis.com/css?family=Faster+One);
@import url(http://fonts.googleapis.com/css?family=Press+Start+2P);
.ice-box {
	box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.50);
	background-color: rgba(36,32,33,0.50);
	padding: 1%;
	color: white;
}

.awesome-sauce {
	font-family: 'Faster One', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
	font-weight: 100;
	font-size: 64px;
	line-height: 50px;
	color: #C700C7;

}

h2 {
	font-family: 'Press Start 2P', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
	font-weight: 200; 
	font-size: 24px;
	color: white;
}

h3{
	font-family: 'Press Start 2P', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
	font-weight: 100; 
	font-size: 8px;
	color: white;
}


body {
	background: url('rocketcat.png') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

}

label {
	color: white;
	font-size: 10px;
	font-family: 'Press Start 2P', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
}

